# kokoro-tts

./: README.md  pyproject.toml  requirements.txt
kokoro_tts/: __init__.py
test/: benchmark.py  busy_loop.py  run_and_smi.py  test_compare.py  test_gpu_process.py  test_limit_cpu.py  test_onnx_gpu.py  test_trim.py  time_breakdown.py
