[project]
name = "kokoro-tts"
version = "2.3.1"
description = "A CLI text-to-speech tool using the Kokoro model, supporting multiple languages, voices (with blending), and various input formats including EPUB books and PDF documents."
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = {text = "MIT"}
authors = [
    {name = "Nazmul Hossain", email = "nazdridoy@gmail.com"}
]
keywords = ["text-to-speech", "tts", "kokoro", "audio", "epub", "pdf", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "kokoro-onnx==0.3.9",
    "pymupdf>=1.25.4",
    "pymupdf4llm>=0.0.17",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
]

[project.scripts]
kokoro-tts = "kokoro_tts:main"

[project.urls]
Homepage = "https://github.com/nazdridoy/kokoro-tts"
Repository = "https://github.com/nazdridoy/kokoro-tts"
Issues = "https://github.com/nazdridoy/kokoro-tts/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.1.0",
]
